--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "rxjs": "^5.1.0",
+    "typescript-collections": "^1.2.3",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
