--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
+    "mustache": "^2.3.0",
+    "ng2-codemirror": "^1.1.2",
     "rxjs": "^5.1.0",
     "typescript-collections": "^1.2.3",
     "zone.js": "^0.8.4"
