--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     "@types/lodash": "^4.14.66",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
-    "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
+    "mdi": "^1.9.33",
     "mustache": "^2.3.0",
     "ng2-codemirror": "^1.1.2",
     "rxjs": "^5.1.0",
+    "spinkit": "^1.2.5",
     "typescript-collections": "^1.2.3",
     "zone.js": "^0.8.4"
   },
