Fix web config for static content.

--- a/src/web.config
+++ b/src/web.config
@@ -1,12 +1,25 @@
 <configuration>
     <system.webServer>
+        <staticContent>
+            <mimeMap fileExtension="md" mimeType="application/text" />
+            <mimeMap fileExtension="mustache" mimeType="application/text" />
+            <mimeMap fileExtension="woff" mimeType="application/font-woff" />
+            <mimeMap fileExtension="woff2" mimeType="application/font-woff" />
+        </staticContent>
         <rewrite>
             <rules>
+                <!-- ignore static files -->
+                <rule name="AngularJS Conditions" stopProcessing="true">
+                    <match url="(assets/.*|app/.*|css/.*|fonts/.*|images/.*|js/.*|node_modules/.*)" />
+                    <conditions logicalGrouping="MatchAll" trackAllCaptures="false" />
+                    <action type="None" />
+                </rule>
                 <rule name="Main Rule" stopProcessing="true">
                     <match url=".*" />
                     <conditions logicalGrouping="MatchAll">
                         <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
                         <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+                        <add input="{REQUEST_URI}" pattern="^/(assets)" negate="true" />
                     </conditions>
                     <action type="Rewrite" url="/" />
                 </rule>
