--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
+    "@ng-bootstrap/ng-bootstrap": "npm 1.0.0-alpha.26",
     "@types/lodash": "^4.14.66",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
