--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/lodash": "^4.14.66",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "dice-typescript": "^0.1.0",
     "lodash": "^4.17.4",
     "markov-typescript": "^1.1.0",
     "mdi": "^1.9.33",
