Switch MIT licence.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "5e"
   ],
   "author": "Thomas R. Wolfe",
-  "license": "SEE LICENSE IN LICENSE",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/trwolfe13/dnd-5e-tools/issues"
   },
